notification list thinner on mobile fixes #23

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,6 +65,12 @@
   overflow-y: auto;
 }
 
+@media only screen and (max-width: 500px) {
+  #navbarDropdownMenuLinkNotificationsMenu {
+    width: 300px;
+  }
+}
+
 #navbarDropdownMenuLinkNotificationsMenu li, #navbarDropdownMenuLinkNotificationsMenu li p {
   width: 100%;
   height: auto;
